GNOME Bugzilla – Bug 653707
Problem in using non-default GMainContext with SoupSessionAsync
Last modified: 2011-07-31 15:33:52 UTC
Created attachment 190986 [details] Test case to show the bug in soup_request_send_async with non-default GMainContext The soup_request_send_async API does not work properly with non-default GMainContext. The callback registered with soup_request_send_async is not called when the async-context property is set to a non-default context. The attached test case shows this issue : in case of default GMainContext both gotHeadersCallback and sendRequestCallback are called. But in case of non-default GMainContext only gotHeadersCallback is called.
fixed in git master. thanks for the bug report